@@ -1,3 +1,10 @@
+2004-03-02  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: Implement get_source_count() accessor. Remove
+	is_multisource() accessor (leftover from long-gone SourceItems).
+	* Engine.pm, PkgVersion.pm: abolish _sourcecount instance
+	variable; useg get_source_count() instead.
+
 2004-03-01  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation.pm: Took out parsing of Type into %type_*[] b/c don't
